force-app/main/default/objects/Employee_Category__c/Employee_Category__c.object-meta.xml
<CustomObject>
    <label>Employee Category</label>
    <pluralLabel>Employee Categories</pluralLabel>
    <nameField>
        <label>Employee Category Number</label>
        <displayFormat>EMPCAT-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object mapping employees to product categories they are authorized for (MOD-01 Master Data Management)</description>
</CustomObject>