force-app/main/default/objects/Employee_Category__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <type>MasterDetail</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Categories</relationshipLabel>
    <relationshipName>Employee_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>