force-app/main/default/objects/Employee_Category__c/fields/Responsibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Responsibility_Type__c</fullName>
    <label>Responsibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>