force-app/main/default/objects/Employee_Category__c/listViews/Active_Employee_Categories.listView-meta.xml
<ListView>
    <fullName>Active_Employee_Categories</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Category__c</columns>
    <columns>Category_Level__c</columns>
    <columns>Responsibility_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Effective_From__c</columns>
    <columns>Effective_To__c</columns>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Active Employee Categories</label>
</ListView>